Add clustering algorithm